# panopticon

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build-check  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  rust-toolchain.toml
.github/scripts/: download-kernel.sh
.github/workflows/: ci.yml  e2e-tls.yml  integration.yml  multi-kernel.yml
docs/: CURRENT-STATE.md  Panopticon Rust Implementation Plan Updates.md  Panopticon Rust Implementation Plan.md
docs/adr/: ADR-000-template.md  ADR-001-fsm-architecture.md  ADR-002-protocol-lifecycle.md  ADR-003-postgres-multi-packet.md  ADR-004-http2-streams.md  ADR-005-grpc-compression.md  ADR-006-tls-interception.md  ADR-007-pii-detection-pipeline.md  ADR-008-external-pii-service.md  ADR-009-known-limitations.md  ADR-010-ebpf-toolchain-and-ci-split.md  ADR-011-host-mode-e2e-harness.md  ADR-012-xtask-ebpf-elf-validation.md  ADR-013-mvp-release-scope-and-test-contract.md  README.md
docs/protocol/: README.md  compression.md  http1.md
helm/panopticon/: Chart.yaml  values.yaml
helm/panopticon/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset.yaml  service.yaml  serviceaccount.yaml
models/: .gitignore
models/distilbert-ner/: README.md
panopticon-agent/: Cargo.toml  build.rs
panopticon-agent/benches/: parser_throughput.rs  pii_regex.rs  protocol_detect.rs
panopticon-agent/src/: config.rs  event_loop.rs  loader.rs  main.rs  replay.rs  util.rs
panopticon-agent/src/compression/: mod.rs
panopticon-agent/src/export/: audit.rs  http_server.rs  json.rs  metrics.rs  mod.rs  otlp.rs
panopticon-agent/src/graph/: aggregator.rs  dag.rs  dns_cache.rs  identity.rs  mod.rs
panopticon-agent/src/pii/: classifier.rs  external.rs  inference.rs  mod.rs  redactor.rs  regex_prefilter.rs  sampler.rs  tokenizer.rs
panopticon-agent/src/platform/: mod.rs  proc_scanner.rs
panopticon-agent/src/protocol/: amqp.rs  detect.rs  dns.rs  fsm.rs  grpc.rs  http1.rs  http2.rs  kafka.rs  mod.rs  mysql.rs  postgres.rs  redis.rs
panopticon-common/: Cargo.toml
panopticon-common/src/: lib.rs
panopticon-common/tests/: abi_compat.rs
panopticon-ebpf/: Cargo.toml  build.rs
panopticon-ebpf/src/: main.rs  maps.rs  process_monitor.rs  sock_monitor.rs  tc_capture.rs  tls_probes.rs
scripts/: download_model.sh
tests/e2e/: Dockerfile.agent  README.md  docker-compose.yaml  nginx.conf  run_tests.sh  run_tests_host.sh  test_tls.sh
tests/e2e/go-tls-server/: Dockerfile  main.go
tests/e2e/openssl-server/: Dockerfile  nginx-ssl.conf
tests/integration/: Dockerfile.agent  Dockerfile.traffic-gen  README.md  docker-compose.yml  runner.sh
tests/integration/configs/: nginx.conf
tests/integration/configs/mysql/: init.sql
tests/integration/configs/postgres/: init.sql
tests/integration/traffic/: db_traffic.py  http_traffic.py  kafka_traffic.py  redis_traffic.py  run_all.sh
tests/integration/validation/: validate.py
xtask/: Cargo.toml
xtask/src/: main.rs
