[package]
name = "panopticon-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
test = false
bench = false
doctest = false

[[bin]]
name = "panopticon-ebpf"
path = "src/main.rs"
test = false
bench = false
doctest = false

[dependencies]
aya-ebpf = { workspace = true }
panopticon-common = { path = "../panopticon-common" }

[build-dependencies]
which = { workspace = true }
